v1/docs/ModelsExtendedKeyUsage.md
# ModelsExtendedKeyUsage

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int32** |  | [optional] 
**Oid** | Pointer to **string** |  | [optional] 
**DisplayName** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsExtendedKeyUsage

`func NewModelsExtendedKeyUsage() *ModelsExtendedKeyUsage`

NewModelsExtendedKeyUsage instantiates a new ModelsExtendedKeyUsage object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsExtendedKeyUsageWithDefaults

`func NewModelsExtendedKeyUsageWithDefaults() *ModelsExtendedKeyUsage`

NewModelsExtendedKeyUsageWithDefaults instantiates a new ModelsExtendedKeyUsage object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsExtendedKeyUsage) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsExtendedKeyUsage) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsExtendedKeyUsage) SetId(v int32)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsExtendedKeyUsage) HasId() bool`

HasId returns a boolean if a field has been set.

### GetOid

`func (o *ModelsExtendedKeyUsage) GetOid() string`

GetOid returns the Oid field if non-nil, zero value otherwise.

### GetOidOk

`func (o *ModelsExtendedKeyUsage) GetOidOk() (*string, bool)`

GetOidOk returns a tuple with the Oid field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetOid

`func (o *ModelsExtendedKeyUsage) SetOid(v string)`

SetOid sets Oid field to given value.

### HasOid

`func (o *ModelsExtendedKeyUsage) HasOid() bool`

HasOid returns a boolean if a field has been set.

### GetDisplayName

`func (o *ModelsExtendedKeyUsage) GetDisplayName() string`

GetDisplayName returns the DisplayName field if non-nil, zero value otherwise.

### GetDisplayNameOk

`func (o *ModelsExtendedKeyUsage) GetDisplayNameOk() (*string, bool)`

GetDisplayNameOk returns a tuple with the DisplayName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDisplayName

`func (o *ModelsExtendedKeyUsage) SetDisplayName(v string)`

SetDisplayName sets DisplayName field to given value.

### HasDisplayName

`func (o *ModelsExtendedKeyUsage) HasDisplayName() bool`

HasDisplayName returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


